# Fast-Drone-250

./: FASTLAB 自主导航无人机硬件.md  purchase_list.xlsx  readme-english-ver.md  readme.md  readme_en.md
carbon_board/: 底板 加长.STEP  底板.STEP  底板.STL  顶板 加长.STEP  顶板.STEP  顶板.STL
firmware/: px4_fmu-v5_default.px4
model/: 上板.STL  下板.STL  相机架.STL
model/manifold_ver/: 上.STL  下板.STL
model/nx_ver/: 上板.STL
params_and_firmware/: cuav_nora_FASTLab250.params  cuav_nora_default_200Hz_Type-C.px4
shfiles/: checkcpu.sh  land.sh  make.sh  record copy.sh  record.sh  rspx4.sh  sys.sh  takeoff.sh
src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/planner/drone_detect/launch/: drone_detect.launch
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/: CMakeLists.txt
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
src/planner/plan_manage/launch/: advanced_param_exp.xml  default.rviz  run_in_sim.launch  single_run_in_exp.launch  single_run_in_sim.launch
src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/planner/rosmsg_tcp_bridge/launch/: .bridge.launch.swp  bridge.launch
src/realflight_modules/VINS-Fusion/: .gitignore
src/realflight_modules/VINS-Fusion/camera_models/: CMakeLists.txt
src/realflight_modules/VINS-Fusion/camera_models/include/camodocal/camera_models/: CataCamera.h  EquidistantCamera.h  ScaramuzzaCamera.h
src/realflight_modules/VINS-Fusion/camera_models/include/camodocal/gpl/: gpl.h
src/realflight_modules/VINS-Fusion/camera_models/src/gpl/: gpl.cc
src/realflight_modules/VINS-Fusion/config/: fast_drone_250.yaml  left.yaml  vins_rviz_config.rviz
src/realflight_modules/VINS-Fusion/global_fusion/: CMakeLists.txt
src/realflight_modules/VINS-Fusion/global_fusion/src/: globalOptNode.cpp
src/realflight_modules/VINS-Fusion/loop_fusion/: CMakeLists.txt
src/realflight_modules/VINS-Fusion/loop_fusion/src/: pose_graph.cpp  pose_graph_node.cpp
src/realflight_modules/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/realflight_modules/VINS-Fusion/vins_estimator/launch/: fast_drone_250.launch  rviz.launch
src/realflight_modules/VINS-Fusion/vins_estimator/src/estimator/: parameters.cpp
src/realflight_modules/VINS-Fusion/vins_estimator/src/utility/: visualization.cpp
src/realflight_modules/px4ctrl/: CMakeLists.txt  README.md  package.xml
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/realflight_modules/px4ctrl/launch/: run_ctrl.launch  thrust_calibrate.launch
src/realflight_modules/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  controller.h  input.cpp  input.h  px4ctrl_node.cpp
src/realflight_modules/px4ctrl/thrust_calibrate_scrips/: record.sh  thrust_calibrate.py
src/realflight_modules/realsense-ros/: .travis.yml  NOTICE
src/realflight_modules/realsense-ros/realsense2_camera/: librealsense2_bionic.rdmanifest  librealsense2_xenial.rdmanifest
src/realflight_modules/realsense-ros/realsense2_camera/include/: t265_realsense_node.h
src/realflight_modules/realsense-ros/realsense2_camera/launch/: rs_camera.launch
src/realflight_modules/realsense-ros/realsense2_camera/msg/: Metadata.msg
src/realflight_modules/realsense-ros/realsense2_camera/scripts/: rs2_listener.py  rs2_test.py  set_cams_transforms.py  show_center_depth.py
src/realflight_modules/realsense-ros/realsense2_camera/src/: t265_realsense_node.cpp
src/realflight_modules/realsense-ros/realsense2_camera/srv/: DeviceInfo.srv
src/utils/DecompROS/: LICENSE
src/utils/DecompROS/decomp_ros_msgs/: CMakeLists.txt  package.xml
src/utils/DecompROS/decomp_ros_msgs/msg/: Ellipsoid.msg  EllipsoidArray.msg  Polyhedron.msg  PolyhedronArray.msg
src/utils/DecompROS/decomp_ros_utils/: CMakeLists.txt  package.xml  plugin_description.xml
src/utils/DecompROS/decomp_ros_utils/include/decomp_basis/: data_type.h  data_utils.h
src/utils/DecompROS/decomp_ros_utils/include/decomp_geometry/: ellipsoid.h  geometric_utils.h  polyhedron.h
src/utils/DecompROS/decomp_ros_utils/include/decomp_ros_utils/: data_ros_utils.h
src/utils/DecompROS/decomp_ros_utils/include/decomp_util/: decomp_base.h  ellipsoid_decomp.h  iterative_decomp.h  line_segment.h  seed_decomp.h
src/utils/DecompROS/decomp_ros_utils/src/: bound_visual.cpp  bound_visual.h  ellipsoid_array_display.cpp  ellipsoid_array_display.h  ellipsoid_array_visual.cpp  ellipsoid_array_visual.h  mesh_visual.cpp  mesh_visual.h  polyhedron_array_display.cpp  polyhedron_array_display.h  vector_visual.cpp  vector_visual.h
src/utils/catkin_simple/: package.xml
src/utils/catkin_simple/cmake/: catkin_simple-extras.cmake.em
src/utils/cmake_utils/cmake_modules/: FindNLopt.cmake
src/utils/pose_utils/: CMakeLists.txt  package.xml
src/utils/quadrotor_msgs/: CMakeLists.txt  package.xml
src/utils/quadrotor_msgs/msg/: Bspline.msg  GoalSet.msg  OptimalTimeAllocator.msg  PolynomialTrajectory.msg  Px4ctrlDebug.msg  Replan.msg  ReplanCheck.msg  SpatialTemporalTrajectory.msg  SwarmCommand.msg  SwarmInfo.msg  SwarmOdometry.msg  TakeoffLand.msg  TrajectoryMatrix.msg
src/utils/rviz_plugins/: CMakeLists.txt
src/utils/rviz_plugins/src/: goal_tool.cpp  goal_tool.h
