<?xml version="1.0"?>
<package>
  <name>px4ctrl</name>
  <version>0.0.0</version>
  <description>A package to control multi-copters using PX4 platform</description>
  <maintainer email="iszhouxin@zju.edu.cn">uav</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>uav_utils</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>uav_utils</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>mavros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
