<?xml version="1.0"?>
<package format="2">
  <name>decomp_ros_utils</name>
  <version>0.0.0</version>
  <description>The decomp_ros_utils package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>decomp_ros_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
